deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-api
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restaurant-api
  template:
    metadata:
      labels:
        app: restaurant-api
    spec:
      containers:
      - name: restaurant-api
        image: divy624/vivekbhai:30
        imagePullPolicy: Always

        ports:
        - containerPort: 8000
