service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-api-service
  namespace: api
spec:
  selector:
    app: restaurant-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
  type: NodePort
