ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  namespace: api
spec:
  ingressClassName: nginx
  rules:
  - host: restaurant.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restaurant-api-service
            port:
              number: 80
