networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restaurant-network-policy
  namespace: api
spec:
  podSelector: {}
  policyTypes:
  - Ingress
